--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Portfolio | Anastasia Gordon</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -56,7 +57,7 @@
 
   <footer>
     <div class="container">
-      Copyright &copy;
+     &copy;
     </div>
   </footer>
 </body>
